--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
         image: sail-8.3/app
         extra_hosts:
             - 'host.docker.internal:host-gateway'
+            - 'elasticsearch:host-gateway'
         ports:
             - '${APP_PORT:-80}:80'
             - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
@@ -49,13 +50,12 @@ services:
             retries: 3
             timeout: 5s
     elasticsearch:
-        image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.18
         environment:
             - discovery.type=single-node
-            - ELASTIC_USERNAME=${ELASTIC_USERNAME}
-            - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
         ports:
-            - '${ELASTICSEARCH_PORT:-9200}:9200'
+            - 9200:9200
+            - 9300:9300
         volumes:
             - sail-elasticsearch:/usr/share/elasticsearch/data
         networks:
