--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "league/flysystem": "^3.24",
+        "predis/predis": "^2.3",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
