--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,16 @@ services:
             - sail-elasticsearch:/usr/share/elasticsearch/data
         networks:
             - sail
+    redis:
+        image: 'redis:alpine'
+        ports:
+            - '${REDIS_PORT:-6379}:6379'
+        volumes:
+            - 'sail-redis:/data'
+        networks:
+            - sail
+        healthcheck:
+            test: [ "CMD", "redis-cli", "ping" ]
 networks:
     sail:
         driver: bridge
@@ -67,4 +77,6 @@ volumes:
     sail-mysql:
         driver: local
     sail-elasticsearch:
+        driver: local
+    sail-redis:
         driver: local
