--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,15 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+JWT_SECRET=
+
+FORWARD_DB_PORT=
+APP_PORT=
+
+XDEBUG=
+
+WEBSOCKET_SERVER_URL=
+
+ELASTICSEARCH_ENABLED=
+ELASTICSEARCH_HOST=""
